--- a/Facial_recognition_with_DNN.ipynb
+++ b/Facial_recognition_with_DNN.ipynb
@@ -378,6 +378,34 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### Clear test directory"
+      ],
+      "metadata": {
+        "id": "EGMtFBzy4s07"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import shutil\n",
+        "def clear_test():\n",
+        "    dir = '/content/test'\n",
+        "    for files in os.listdir(dir):\n",
+        "        path = os.path.join(dir, files)\n",
+        "        try:\n",
+        "            shutil.rmtree(path)\n",
+        "        except OSError:\n",
+        "            os.remove(path)"
+      ],
+      "metadata": {
+        "id": "BeF5ALyq4sTd"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### face recognition\n"
       ],
       "metadata": {
@@ -397,7 +425,7 @@
         "    names = [x[:-4] for x in image_filenames]\n",
         "    # Iterate over test images to find match one by one\n",
         "    if len(paths_to_test_images)==0:\n",
-        "      print(\"No images found\")\n",
+        "        print(\"No images found\")\n",
         "    for path_to_image in paths_to_test_images:\n",
         "        # Get face encodings from the test image\n",
         "        face_encodings_in_image = get_face_encodings(path_to_image)\n",
@@ -407,19 +435,19 @@
         "            exit()\n",
         "        # Find match for the face encoding found in this test image\n",
         "        try:\n",
-        "          match = find_match(face_encodings, names, face_encodings_in_image[0])\n",
-        "          # Print the path of test image and the corresponding match\n",
-        "          print(path_to_image, \" >>>> recognized >>>>\", match.partition(\"_\")[0])\n",
-        "          face = match.partition(\"_\")[0]\n",
-        "          return face\n",
+        "            match = find_match(face_encodings, names, face_encodings_in_image[0])\n",
+        "            # Print the path of test image and the corresponding match\n",
+        "            print(path_to_image, \" >>>> recognized >>>>\", match.partition(\"_\")[0])\n",
+        "            face = match.partition(\"_\")[0]\n",
         "        except:\n",
-        "          face = \"No face\"\n",
-        "          print(\"No face detected\")"
+        "            face = \"No face\"\n",
+        "            print(\"No face detected\")\n",
+        "    return face"
       ],
       "metadata": {
         "id": "GtGoXYlwwb0o"
       },
-      "execution_count": 22,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -519,6 +547,7 @@
       "cell_type": "code",
       "source": [
         "def update_database():\n",
+        "    clear_test()\n",
         "    fetch_image()\n",
         "    try:\n",
         "      face = face_recognition()\n",
@@ -537,7 +566,7 @@
       "metadata": {
         "id": "SqVBOOYb6o6_"
       },
-      "execution_count": 16,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -552,16 +581,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OfFHbce0vj1s",
-        "outputId": "3b343243-9394-43cb-940d-6496b4c392d3"
+        "outputId": "ff66fd5e-a944-4878-97e3-14939b0e7e2b"
       },
-      "execution_count": 25,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "The program is ready and executable\n",
-            "Took 13.681983 minutes\n"
+            "Took 32.199899 minutes\n"
           ]
         }
       ]
@@ -569,7 +598,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Run this block only-- without app"
+        "### Run every block before this with run-before command from runtime"
+      ],
+      "metadata": {
+        "id": "dto1DQlp7qyD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Run this block only-- without app"
       ],
       "metadata": {
         "id": "Tji9AuqizCYj"
@@ -578,9 +616,8 @@
     {
       "cell_type": "code",
       "source": [
-        "### comment out this block if you're running from the app\n",
         "try:\n",
-        "  face = face_recognition()\n",
+        "  face_recognition()\n",
         "except IndexError:\n",
         "  print(\"Couldn't find face\")"
       ],
@@ -589,15 +626,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SICbN7KPzOjT",
-        "outputId": "719d5d68-b8b9-4964-ee74-9fc1204d3582"
+        "outputId": "7de11766-62e3-4c80-aada-ce139774ee28"
       },
-      "execution_count": 24,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "test/Capt Tanzil_13.jpg  >>>> recognized >>>> Capt Tanzil\n"
+            "test/Lt Abdullah_19.jpg  >>>> recognized >>>> Lt Abdullah\n",
+            "test/test.jpg  >>>> recognized >>>> Lt Abdullah\n",
+            "test/Lt Salman_27.jpg  >>>> recognized >>>> Lt Salman\n",
+            "test/Capt Tanzil_292.jpg  >>>> recognized >>>> Capt Tanzil\n",
+            "test/Lt Salman.jpg  >>>> recognized >>>> Lt Salman\n",
+            "test/Fo Mehedi_24.jpg  >>>> recognized >>>> Fo Mehedi\n"
           ]
         }
       ]
@@ -605,7 +647,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Run this block only-- hooked with app"
+        "## Run this block only-- hooked with app"
       ],
       "metadata": {
         "id": "uokBQis9xLTT"
@@ -621,17 +663,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Fq_LAE1GtBPU",
-        "outputId": "cff8111d-98b2-4d29-cb54-7c942af5b6cc"
+        "outputId": "9b09dcd1-71cc-4919-fe80-9932ca174681"
       },
-      "execution_count": null,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "test/test.jpg  >>>> recognized >>>> Lt Salman\n",
-            "Face recognized: Lt Salman\n",
-            "Database update accordingly\n"
+            "test/test.jpg  >>>> recognized >>>> Lt Abdullah\n",
+            "Face recognized: Lt Abdullah\n",
+            "Database updated accordingly\n"
           ]
         }
       ]
